[package]
name = "stock_rt"
version = "0.1.0"
authors = ["Administrator"]
edition = "2018"

[lib]
name = "stock_py"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.0-beta.1", features = ["mysql"] }
async-std = { version = "1.5.0", features = ["attributes"] }
paw = "1.0"
futures = { version= "0.3.5", features = ["thread-pool"] }
tokio = { version = "0.2.22", features = ["full"] }
once_cell = "1.4.0"
chrono = "0.4.13"
hyper = "0.13"
encoding = "0.2.33"
redis = "0.17.0"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]