[package]
name = "stock_rt"
version = "0.1.0"
authors = ["Administrator"]
edition = "2018"

[lib]
name = "stock_py"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.1", features = ["mysql", "runtime-async-std-native-tls"] }
async-std = { version = "1.7.0", features = ["attributes"] }
paw = "1.0"
futures = { version= "0.3" }
once_cell = "1.5.2"
chrono = "0.4"
surf = "2.1.0"
redis = { version = "0.17.0" }
flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { vresion = "0.3.9", features = ['shellapi', 'winuser', 'libloaderapi', 'wingdi', 'windef', 'impl-default'] }

[dependencies.pyo3]
version = "0.12"
features = ["extension-module"]