[package]
name = "stock_rt"
version = "0.1.0"
authors = ["Administrator"]
edition = "2018"

[lib]
name = "stock_py"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.1", features = ["mysql", "runtime-async-std-native-tls"] }
async-std = { version = "1.9.0", features = ["attributes"] }
paw = "1.0"
futures = { version= "0.3" }
once_cell = "1.5.2"
chrono = "0.4"
surf = "2.1.0"
combine = { version="4.4.0", features=["std", "futures-io-03"] }
redis = { version = "0.19.0", features = ["async-std-comp", "connection-manager"] }
flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }

#日志
log = "0.4.14"
log4rs = "1.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { vresion = "0.3.9", features = ['shellapi', 'winuser', 'libloaderapi', 'wingdi', 'windef', 'impl-default'] }

[dependencies.pyo3]
version = "0.12"
features = ["extension-module"]